--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="https://instagram.com/__mr_ar___?utm_source=qr&igshid=MThlNWY1MzQwNA=="><img src="assets/img/Lake.webp" alt="Lake image" class="img-fluid"></a>
+                <a href="https://instagram.com/__mr_ar___?utm_source=qr&igshid=MThlNWY1MzQwNA=="><img src="assets/img/laken.webp" alt="Lake image" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -451,7 +451,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="https://instagram.com/__mr_ar___?utm_source=qr&igshid=MThlNWY1MzQwNA=="><img src="assets/img/Bike.webp" alt="" class="img-fluid"></a>
+                <a href="https://instagram.com/__mr_ar___?utm_source=qr&igshid=MThlNWY1MzQwNA=="><img src="assets/img/biken.webp" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -480,7 +480,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="https://instagram.com/__mr_ar___?utm_source=qr&igshid=MThlNWY1MzQwNA=="><img src="assets/img/smile.webp" alt="" class="img-fluid"></a>
+                <a href="https://instagram.com/__mr_ar___?utm_source=qr&igshid=MThlNWY1MzQwNA=="><img src="assets/img/smilen.webp" alt="smilepic" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
